<resources>
    <string name="app_name">mockCommerce</string>

    <string name="title_categories">Kategoriler</string>
    <string name="title_basket">Sepet</string>
    <string name="title_explore">Keşfet</string>
    <string name="title_orders">Şiparişlerim</string>
    <string name="title_account">Hesap</string>
    <string name="sepete_ekle">Sepete Ekle</string>

    <string name="purchase">Satın Al</string>
    <string name="basketSummaryDesc">Özet aç, kapa</string>
    <string name="basket_products_title">Sepetim</string>
    <string name="basket_postponed_title">Daha Sonra Alacaklarım</string>
    <string name="select_address">Adres Seç</string>
    <string name="title_activity_payment">PaymentActivity</string>

    <string name="delivery_address">Teslimat Adresim</string>
    <string name="add_address_description">Yeni adres ekleme butonu</string>
    <string name="other_addresses">DİĞER ADRESLERİM</string>
    <string name="billing_address">Fatura Adresim</string>
    <string name="product_image_description">Ürün resmi</string>
    <string name="checkout_product_list_title">Ürünler</string>
    <string name="order_total">Toplam</string>

    <string name="price">"%1$.2f TL</string>
    <string name="checkout_payment_title">Kredi / Banka Kartı</string>
    <string name="checkout_payment_label_cardno">Kart Numarası</string>
    <string name="checkout_payment_label_cardholder">Kart Sahibi</string>
    <string name="checkout_payment_label_securitycode">Güvenlik Kodu</string>
    <string name="checkout_payment_sozlesme_title">Sözleşmeler ve Formlar</string>
    <string name="checkout_btn_on_bilgi_form">Ön Bilgilendirme Formu</string>
    <string name="checkout_btn_sozlesme_form">Satoş Sözleşmesi</string>
    <string name="payment_aggrement">Kabul ediyorum.</string>
    <string name="checkout_confirm_checkout">ÖDEMEYİ GERÇEKLEŞTİR</string>
    <string name="sort">SIRALA</string>
    <string name="filter">FİLTRELE</string>
    <string name="promotions">Kampanyalar</string>
    <string name="add_to_basket">SEPETE EKLE</string>
    <string name="add_to_basket_together">BİRLİKTE EKLE</string>
    <string name="category_image_description">Kategori resmi</string>
    <string name="shipment_receiver">Alıcı Bilgileri</string>
    <string name="shipment_address">Adres</string>
    <string name="name_person">Ad</string>
    <string name="surname_person">Soyad</string>
    <string name="phone">Telefon</string>
    <string name="district">İlçe</string>
    <string name="address">Adres</string>
    <string name="address_name">Adres Adı</string>
    <string name="address_as_billing">Fatura bilgileri olarak da kaydet</string>
    <string name="save_address">ADRESİ KAYDET</string>
    <string name="my_addresses">Adreslerim</string>
    <string name="settings">Ayarlar</string>
    <string name="my_favourites">Favorilerim</string>
    <string name="logout">Çıkış Yap</string>

    <string name="email">E-Posta</string>
    <string name="password">Parola</string>
    <string name="login">GİRİŞ YAP</string>
    <string name="register">KAYIT OL</string>
    <string name="go_back">GERİ DÖN</string>
    <string name="add_new">Yeni girdi ekle</string>
    <string name="search_in_orders">Şiparişlerde ara</string>
    <string name="track_shipment">Siparişi takip et</string>
    <string name="order_date">Tarih:</string>
    <string name="forward">İleri</string>
    <string name="order_no">Sipariş Numarası: </string>
    <string name="adress_info">Adres Bilgileri</string>
    <string name="order_products">Ürünler</string>
    <string name="no_orders">Listelenecek şipariş bulunmuyor.</string>
    <string name="no_addresses">Listelenecek adres bulunamadı.</string>

    <string-array name="card_expiration_month">
        <item>Ay</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>


    <string-array name="card_expiration_year">
        <item>Yıl</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
    </string-array>

    <!--https://gist.github.com/habil/efecbf415ba7941c2c37cc0128a96d61-->
    <string-array name="cityArrayList">
        <item>Şehir</item>
        <item>Adana</item>
        <item>Adıyaman</item>
        <item>Afyon</item>
        <item>Ağrı</item>
        <item>Amasya</item>
        <item>Ankara</item>
        <item>Antalya</item>
        <item>Artvin</item>
        <item>Aydın</item>
        <item>Balıkesir</item>
        <item>Bilecik</item>
        <item>Bingöl</item>
        <item>Bitlis</item>
        <item>Bolu</item>
        <item>Burdur</item>
        <item>Bursa</item>
        <item>Çanakkale</item>
        <item>Çankırı</item>
        <item>Çorum</item>
        <item>Denizli</item>
        <item>Diyarbakır</item>
        <item>Edirne</item>
        <item>Elazığ</item>
        <item>Erzincan</item>
        <item>Erzurum</item>
        <item>Eskişehir</item>
        <item>Gaziantep</item>
        <item>Giresun</item>
        <item>Gümüşhane</item>
        <item>Hakkari</item>
        <item>Hatay</item>
        <item>Isparta</item>
        <item>İçel</item>
        <item>İstanbul</item>
        <item>İzmir</item>
        <item>Kars</item>
        <item>Kastamonu</item>
        <item>Kayseri</item>
        <item>Kırklareli</item>
        <item>Kırşehir</item>
        <item>Kocaeli</item>
        <item>Konya</item>
        <item>Kütahya</item>
        <item>Malatya</item>
        <item>Manisa</item>
        <item>Kahramanmaraş</item>
        <item>Mardin</item>
        <item>Muğla</item>
        <item>Muş</item>
        <item>Nevşehir</item>
        <item>Niğde</item>
        <item>Ordu</item>
        <item>Rize</item>
        <item>Sakarya</item>
        <item>Samsun</item>
        <item>Siirt</item>
        <item>Sinop</item>
        <item>Sivas</item>
        <item>Tekirdağ</item>
        <item>Tokat</item>
        <item>Trabzon</item>
        <item>Tunceli</item>
        <item>Şanlıurfa</item>
        <item>Uşak</item>
        <item>Van</item>
        <item>Yozgat</item>
        <item>Zonguldak</item>
        <item>Aksaray</item>
        <item>Bayburt</item>
        <item>Karaman</item>
        <item>Kırıkkale</item>
        <item>Batman</item>
        <item>Şırnak</item>
        <item>Bartın</item>
        <item>Ardahan</item>
        <item>Iğdır</item>
        <item>Yalova</item>
        <item>Karabük</item>
        <item>Kilis</item>
        <item>Osmaniye</item>
        <item>Düzce</item>
    </string-array>

    <string-array name="order_qualifier">
        <item>Tümü</item>
        <item>Son 30 Gün</item>
        <item>Son 6 Ay</item>
        <item>Son 1 Yıl</item>
        <item>Son 2 Yıl</item>
        <item>Son 3 Yıl</item>
    </string-array>

    <string name="no_favourites">Listelenecek favori ürün bulunamadı.</string>
    <string name="no_basket_items">Listelenecek ürün bulunamadı.</string>
    <string name="button_product_info">Ürün detayları</string>
    <string name="button_product_comment">Ürün yorumları</string>
    <string name="no_item_to_list">Listenelerek eleman bulunamadı.</string>
    <string name="button_star_desc">Yıldız buttonu</string>

</resources>
