<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/title_explore"
        />

    <item
        android:id="@+id/categories"
        android:icon="@drawable/ic_category"
        android:title="@string/title_categories"
        />

    <item
        android:id="@+id/basket"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/title_basket"
        />

    <item
        android:id="@+id/order"
        android:icon="@drawable/ic_orders"
        android:title="@string/title_orders"
        />

    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account"
        />
</menu>